--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node-red-contrib-buffer-array",
   "node-red": {
+    "version": ">=0.14.0",
     "nodes": {
       "buffer-array": "buffer-array.js"
     }
@@ -11,10 +12,28 @@
     "node-red",
     "array",
     "buffer",
-    "bufferarray",
+    "buffer array",
     "ring buffer",
     "ring buffer array"
   ],
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/IOIO72/node-red-contrib-buffer-array.git"
+  },
+  "contributors": [
+    {
+      "name": "Tamio Honma",
+      "email": "tamio@honma.de",
+      "url": "http://www.honma.de"
+    },
+    {
+      "name": "Gilzad Hamuni",
+      "url": "http://gilzad.de"
+    }
+  ],
   "license": "MIT",
-  "version": "0.1.0"
+  "version": "1.0.0"
 }
