--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "ring buffer array"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/_spec.js"
   },
   "repository": {
     "type": "git",
@@ -35,5 +35,9 @@
     }
   ],
   "license": "MIT",
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "devDependencies": {
+    "node-red": "^0.18.4",
+    "node-red-node-test-helper": "^0.1.6"
+  }
 }
